lorm-macros/tests/compile_fail/has_many_through.stderr
error: unknown key `through` (supported: fk, as)
 --> tests/compile_fail/has_many_through.rs:7:8
  |
7 | #[lorm(has_many(Post, through = "Tag"))]
  |        ^^^^^^^^
